# ImageResizer

./: CMakeLists.txt  LICENSE  main.cpp
Module1/: CMakeLists.txt
Module1/include/: testing.h
Module1/src/: testing.cpp
include/: testing.h
src/: main.cpp
